[tool.poetry]
name = "ie-usefull-function"
version = "0.1.0"
description = ""
authors = ["Tomasini Luca <luca.tomasini@heig-vd.ch>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
polars = "^1.17.1"
geopandas = "^1.0.1"
tqdm = "^4.67.1"
duckdb = "^1.1.3"
pyocclient = "^0.6"
geoalchemy2 = "^0.16.0"
dynaconf = "^3.2.6"
coloredlogs = "^15.0.1"
shapely = "^2.0.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
