[tool.poetry]
name = "utility-functions"
version = "0.1.0"
description = ""
authors = ["Tomasini Luca <luca.tomasini@heig-vd.ch>"]
readme = "README.md"
packages = [
    {include = "general_function.py", from="src"},
    {include = "polars_function.py", from="src"},
    {include = "networkx_function.py", from="src"},
    {include = "shapely_function.py", from="src"},
    {include = "polars_shapely_function.py", from="src"},
]  


[tool.poetry.dependencies]
python = "^3.12"
polars = ">=0.17.0, <2.0.0"
geopandas = "^1.0.1"
tqdm = "^4.67.1"
duckdb = "^1.1.3"
pyocclient = "^0.6"
geoalchemy2 = ">=0.16.0, <1.0.0"
dynaconf = "^3.2.6"
coloredlogs = "^15.0.1"
shapely = "^2.0.6"
ipykernel = "^6.29.5"
sphinx = "^8.1.3"
sphinx-copybutton = "^0.5.2"
pydata-sphinx-theme = "^0.16.1"
sphinx-rtd-size = "^0.2.0"
sphinx-rtd-theme = "^3.0.2"
ghp-import = "^2.1.0"
nbsphinx = "^0.9.5"
myst-parser = "^4.0.0"
networkx = "^3.4.2"
more-itertools = "^10.5.0"
python-graphblas = "^2024.2.0"
pyarrow = "^19.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
